--- a/backend/package.json
+++ b/backend/package.json
@@ -25,12 +25,16 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
+    "db-migrate": "^0.11.13",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
+    "@types/mysql": "^2.15.20",
     "dotenv": "^11.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3"
   }
 }
