--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "test",
-    "start": "ts-node-dev ./index.ts"
+    "start": "db-migrate up && ts-node-dev ./index.ts"
   },
   "repository": {
     "type": "git",
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "@types/mysql": "^2.15.20",
+    "db-migrate-mysql": "^2.2.0",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "typescript": "^4.5.4"
   }
 }
