--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "test",
-    "start": "db-migrate up && ts-node-dev ./index.ts"
+    "start": "db-migrate up && ts-node-dev ./src/index.ts"
   },
   "repository": {
     "type": "git",
