--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "test",
-    "start": "db-migrate up && ts-node-dev ./src/index.ts"
+    "start": "db-migrate up && ts-node-dev ./src/index.ts",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -23,9 +24,13 @@
   "homepage": "https://github.com/totalnemtom/gym_progress#readme",
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/eslint": "^8.2.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "db-migrate": "^0.11.13",
+    "eslint": "^8.6.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8"
