--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "db-migrate": "^0.11.13",
     "eslint": "^8.6.0",
     "jest": "^27.4.7",
+    "node-mocks-http": "^1.11.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
@@ -44,6 +45,8 @@
     "winston": "^3.3.0"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/mysql": "^2.15.20",
     "db-migrate-mysql": "^2.2.0",
     "dotenv": "^11.0.0",
