--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/totalnemtom/gym_progress#readme",
   "devDependencies": {
     "@types/babel__template": "^7.4.1",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/eslint": "^8.2.2",
     "@types/express": "^4.17.13",
@@ -48,6 +49,7 @@
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-typescript": "^7.16.7",
     "@types/mysql": "^2.15.20",
+    "cors": "^2.8.5",
     "db-migrate-mysql": "^2.2.0",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
